--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
             </label>
             <label>
                 Date 
-                <input type="number" id="creation-day">
-                <input type="number" id="creation-month">
-                <input type="number" id="creation-year">
+                <input type="number" placeholder="DD" class="creation-date" id="creation-day">
+                <input type="number" placeholder="MM" class="creation-date" id="creation-month">
+                <input type="number" placeholder="YY" class="creation-date" id="creation-year">
             </label>
             <div id="colors">
-                <span id="a6f4b5"></span>
-                <span id="c68ff1"></span>
-                <span id="ff8ab5"></span>
-                <span id="fec17a"></span>
-                <span id="CEE7E6"></span>
+                <span id="a6f4b67a"></span>
+                <span id="c68ff17c"></span>
+                <span id="ff8ab57e"></span>
+                <span id="fec07a81"></span>
+                <span id="cee7e67c"></span>
             </div>
             <div>
                 <button id="close-creation">Close</button>
@@ -39,17 +39,7 @@
             <h1 id="title">Task manager</h1>
             <button id="new-task">New task</button>
         </header>
-        <section id="task-body">
-            <div class="task">
-                <input class="checkbox" type="checkbox" >
-                <div class="task-content">
-                    <h3 class="task-title">Task title</h3>
-                    <p class="task-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus, sunt?</p>
-                    <span class="task-date">DD/MM/AA</span>
-                </div>
-                <button class="detele-task">Delete</button>
-            </div>
-        </section>
+        <section id="task-body"></section>
     </main>
     <script src="scripts.js"></script>
 </body>
